<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        tools:context=".MapsActivity" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/curvedsquare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" >

        <ImageView
            android:id="@+id/originMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="69dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/usersloacationbb"
            android:contentDescription="@string/originMarkerDescription"/>

        <ImageButton
            android:id="@+id/buttonOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="98dp"
            android:layout_toEndOf="@+id/originMarker"
            android:background="@drawable/searchlocation"
            android:contentDescription="@string/searchDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="126dp"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/bold"
            android:text="@string/promptOrigin"
            android:textColor="@color/dark_blue"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="125dp"
            android:layout_marginTop="91dp"
            android:fontFamily="@font/bold"
            android:text="@string/promptDestination"
            android:textColor="@color/dark_blue"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/destinationMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="68dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/destinationbb"
            android:contentDescription="@string/destinationMarkerDescription"/>

        <ImageButton
            android:id="@+id/buttonDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="100dp"
            android:layout_toEndOf="@+id/destinationMarker"
            android:background="@drawable/searchdesti"
            android:contentDescription="@string/searchDescription"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_below="@+id/buttonDestination"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="137dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="135dp"
            android:background="@drawable/button_tara"
            android:text="@string/Tara"
            android:fontFamily="@font/bold"
            android:textColor="@color/white" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

